fix overflow

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -38,8 +38,7 @@ html {
 .terms {
   height: 400px;
   padding: 70px;
-      overflow: auto;
-    overflow-y: auto;
+    overflow: auto;
 }
 
 .button-container {
